--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="#">Golf</a></li>
             <li><a href="#">Surplus</a></li>
             <li><a href="#">A.P.C. Lacoste</a></li>
-            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i> <span>Search</span></a></li>
           </ul>
           <ul class="r-nav">
             <li><a href="#"><i class="fa-solid fa-bag-shopping"></i> 장바구니</a></li>
@@ -89,7 +89,7 @@
             <li data-alt="tab-content03">Kids</li>
           </ul>
         </div>
-        <div class="tab-contents">
+        <div class="tab-contents active" id="tab-content01">
           <div class="content-list content-list01">
             <div class="img-box"><img src="./images/women01.jpeg" alt="우먼01"></div>
             <h3 class="list-tit">ELISE<br>CADIGAN</h3>
@@ -97,50 +97,138 @@
           </div>
           <div class="content-list content-list02">
             <div class="img-box"><img src="./images/women02.jpeg" alt="우먼02"></div>
-            <h3 class="list-tit">ELISE<br>CADIGAN</h3>
-            <p class="list-txt">319,000</p>
+            <h3 class="list-tit">Marina<br>Short-Sleeve<br>Shirt</h3>
+            <p class="list-txt">229,000</p>
           </div>
           <div class="content-list content-list03">
             <div class="img-box"><img src="./images/women03.jpeg" alt="우먼03"></div>
-            <h3 class="list-tit">ELISE<br>CADIGAN</h3>
-            <p class="list-txt">319,000</p>
+            <h3 class="list-tit">Denise<br>T-Shirt</h3>
+            <p class="list-txt">159,000</p>
           </div>
           <div class="content-list content-list04">
             <div class="img-box"><img src="./images/women04.jpeg" alt="우먼04"></div>
-            <h3 class="list-tit">ELISE<br>CADIGAN</h3>
-            <p class="list-txt">319,000</p>
+            <h3 class="list-tit">Lea<br>Skirt</h3>
+            <p class="list-txt">239,000</p>
           </div>
           <div class="content-list content-list05">
             <div class="img-box"><img src="./images/women05.jpeg" alt="우먼05"></div>
-            <h3 class="list-tit">ELISE<br>CADIGAN</h3>
-            <p class="list-txt">319,000</p>
+            <h3 class="list-tit">Cannes<br>Trouser</h3>
+            <p class="list-txt">329,000</p>
           </div>
           <div class="content-list content-list06">
             <div class="img-tit">
               <div class="img-box"><img src="./images/women06.jpeg" alt="우먼06"></div>
-              <h3 class="list-tit">ELISE<br>CADIGAN</h3>
+              <h3 class="list-tit">Moss<br>Knit<br>Vest</h3>
             </div>
             <p class="list-txt">319,000</p>
           </div>
           <div class="content-list content-list07">
             <div class="img-box"><img src="./images/women07.jpeg" alt="우먼07"></div>
-            <h3 class="list-tit">ELISE<br>CADIGAN</h3>
+            <h3 class="list-tit">Nancy<br>Skirt</h3>
             <p class="list-txt">319,000</p>
           </div>
           <div class="content-list content-list08">
             <div class="img-box"><img src="./images/women08.jpeg" alt="우먼08"></div>
-            <h3 class="list-tit">ELISE<br>CADIGAN</h3>
-            <p class="list-txt">319,000</p>
+            <h3 class="list-tit">VPC<br>White<br>T-Shirt</h3>
+            <p class="list-txt">159,000</p>
           </div>
           <div class="content-list content-list09">
             <div class="img-box"><img src="./images/women09.jpeg" alt="우먼09"></div>
-            <h3 class="list-tit">ELISE<br>CADIGAN</h3>
-            <p class="list-txt">319,000</p>
+            <h3 class="list-tit">Nina<br>Hoodie</h3>
+            <p class="list-txt">409,000</p>
           </div>
           <div class="content-list content-list10">
             <div class="img-box"><img src="./images/women10.jpeg" alt="우먼10"></div>
-            <h3 class="list-tit">ELISE<br>CADIGAN</h3>
+            <h3 class="list-tit">Manel<br>Polo<br>Shirt</h3>
             <p class="list-txt">319,000</p>
+          </div>
+        </div>
+        <div class="tab-contents" id="tab-content02">
+          <div class="content-list content-list01">
+            <div class="img-box"><img src="./images/men01.jpeg" alt="men01"></div>
+            <h3 class="list-tit">Raymond<br>T-Shirt</h3>
+            <p class="list-txt">169,000</p>
+          </div>
+          <div class="content-list content-list02">
+            <div class="img-box"><img src="./images/men02.jpeg" alt="men02"></div>
+            <h3 class="list-tit">Richie<br>Shirt</h3>
+            <p class="list-txt">279,000</p>
+          </div>
+          <div class="content-list content-list03">
+            <div class="img-box"><img src="./images/men03.jpeg" alt="men03"></div>
+            <h3 class="list-tit">Raymond<br>T-Shirt</h3>
+            <p class="list-txt">169,000</p>
+          </div>
+          <div class="content-list content-list04">
+            <div class="img-box"><img src="./images/men04.jpeg" alt="men04"></div>
+            <h3 class="list-tit">Trek<br>Overshirt</h3>
+            <p class="list-txt">349,000</p>
+          </div>
+          <div class="content-list content-list05">
+            <div class="img-box"><img src="./images/men05.jpeg" alt="men05"></div>
+            <h3 class="list-tit">Nathanael<br>Jacket</h3>
+            <p class="list-txt">469,000</p>
+          </div>
+          <div class="content-list content-list06">
+            <div class="img-tit">
+              <div class="img-box"><img src="./images/men06.jpeg" alt="men06"></div>
+              <h3 class="list-tit">Axelle<br>Bag</h3>
+            </div>
+            <p class="list-txt">419,000</p>
+          </div>
+          <div class="content-list content-list07">
+            <div class="img-box"><img src="./images/men07.jpeg" alt="men07"></div>
+            <h3 class="list-tit">Nathanael<br>Jacket</h3>
+            <p class="list-txt">469,000</p>
+          </div>
+          <div class="content-list content-list08">
+            <div class="img-box"><img src="./images/men08.jpeg" alt="men08"></div>
+            <h3 class="list-tit">Fairfax<br>Jeans</h3>
+            <p class="list-txt">339,000</p>
+          </div>
+          <div class="content-list content-list09">
+            <div class="img-box"><img src="./images/men09.jpeg" alt="men09"></div>
+            <h3 class="list-tit">Joey<br>Short-Sleeve<br>Shirt</h3>
+            <p class="list-txt">279,000</p>
+          </div>
+          <div class="content-list content-list10">
+            <div class="img-box"><img src="./images/men10.jpeg" alt="men10"></div>
+            <h3 class="list-tit">Jude<br>Polo<br>Jumper</h3>
+            <p class="list-txt">299,000</p>
+          </div>
+        </div>
+        <div class="tab-contents" id="tab-content03">
+          <div class="content-list content-list01">
+            <div class="img-box"><img src="./images/kids01.jpeg" alt="kids01"></div>
+            <h3 class="list-tit">Tao<br>T-Shirt</h3>
+            <p class="list-txt">99,000</p>
+          </div>
+          <div class="content-list content-list02">
+            <div class="img-box"><img src="./images/kids02.jpeg" alt="kids02"></div>
+            <h3 class="list-tit">Tao<br>T-Shirt</h3>
+            <p class="list-txt">99,000</p>
+          </div>
+          <div class="content-list content-list03">
+            <div class="img-box"><img src="./images/kids03.jpeg" alt="kids03"></div>
+            <h3 class="list-tit">Eden<br>T-Shirt</h3>
+            <p class="list-txt">99,000</p>
+          </div>
+          <div class="content-list content-list04">
+            <div class="img-box"><img src="./images/kids04.jpeg" alt="kids04"></div>
+            <h3 class="list-tit">Elie<br>Sweatshirt</h3>
+            <p class="list-txt">169,000</p>
+          </div>
+          <div class="content-list content-list05">
+            <div class="img-box"><img src="./images/kids05.jpeg" alt="kids05"></div>
+            <h3 class="list-tit">Achille<br>Sweatshirt</h3>
+            <p class="list-txt">169,000</p>
+          </div>
+          <div class="content-list content-list06">
+            <div class="img-tit">
+              <div class="img-box"><img src="./images/kids06.jpeg" alt="kids06"></div>
+              <h3 class="list-tit">Achille<br>Sweatshirt</h3>
+            </div>
+            <p class="list-txt">169,000</p>
           </div>
         </div>
       </div>
@@ -162,8 +250,8 @@
     <footer class="footer">
       <div class="container">
         <div class="logo-sns">
-          <div class="img">
-            <img src="" alt="">
+          <div class="logo">
+            <img src="./images/logo-fff.png" alt="브랜드로고">
           </div>
           <div class="sns">
             <span><a href="#"><i class="fa-brands fa-instagram"></i></a></span>
@@ -177,38 +265,45 @@
             <span>주소 : 서울 강남구 강남대로 580 8층</span>
             <span>물류센터 : 경기도 평택시 서탄면 서탄2로 97</span>
             <span>사업자등록번호 : 211-81-39521</span>
-            <span>통신판매업신고번호 : 2009-서울강남-02143</span>
+            <span>통신판매업신고번호 : 2009-서울강남-02143</span><br>
             <span>개인정보관리자 : 송하영</span>
             <span>전화번호 : 1833-2250</span>
             <span>팩스번호 : 02-547-6363</span>
           </div>
-          <div class="about">
-            <a href="#">About A.P.C.</a>
-            <a href="#">지불방법</a>
-            <a href="#">반품교환</a>
-            <a href="#">이용약관</a>
-            <a href="#">Site Map</a>
-            <a href="#">상품배송</a>
-            <a href="#">공지사항</a>
-            <a href="#">채무지급보증</a>
+          <div class="footer-about">
+            <div class="about">
+              <a href="#">About A.P.C.</a>
+              <a href="#">Site Map</a>
+            </div>
+            <div class="about">
+              <a href="#">지불방법</a>
+              <a href="#">상품배송</a>
+            </div>
+            <div class="about">
+              <a href="#">반품교환</a>
+              <a href="#">공지사항</a>
+            </div>
+            <div class="about">
+              <a href="#">공지사항</a>
+              <a href="#">채무지급보증</a>
+            </div>
           </div>
-          <div class="newsletter">
-            <span>
-              NEWSLETTER : A.P.C.의 새로운 컬렉션, 이벤트, 세일 소식을 받아볼 수 있습니다.
-            </span>
-            <span>
-              <a href="#">뉴스레터구독신청</a>
-            </span>
-          </div>
-          <div class="info-use">
-            <a href="#">이용안내</a>
-            <a href="#">개인정보처리방침</a>
+          <div class="news-info">
+            <div class="newsletter">
+              <p>NEWSLETTER : A.P.C.의 새로운 컬렉션, 이벤트, 세일 소식을 받아볼 수 있습니다.</p>
+              <button>뉴스레터구독신청</button>
+            </div>
+            <div class="info-use">
+              <a href="#">이용안내</a>
+              <a href="#">개인정보처리방침</a>
+            </div>
           </div>
         </address>
       </div>
     </footer>
   </div>
   <script>
+    // Slider
     $('.slider').slick({
       autoplay: true,
       autoplaySpeed: 1800,
@@ -218,6 +313,23 @@
       fade: true,
       cssEase: 'linear'
     });
+
+    // Header
+    $(window).scroll(function () {
+      if ($(window).scrollTop() > 50) {
+        $('header').addClass('active')
+      } else {
+        $('header').removeClass('active')
+      }
+    })
+
+    // Tab
+    $('.tab-nav li').click(function () {
+      $(this).addClass('active')
+      $(this).siblings().removeClass('active')
+      $('.tab-contents').removeClass('active')
+      $('#' + $(this).attr('data-alt')).addClass('active')
+    })
   </script>
 </body>
 
