--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A.P.C.</title>
+  <meta name="keywords" content="apc,lacoste">
+  <meta name="description" content="APC KOREA.">
+  <!-- 오픈그래픽 -->
+  <meta property="og:image" content="./images/logo.gif">
+  <meta property="og:url" content="https://jaehee583.github.io/A.P.C./">
+  <meta property="og:title" content="A.P.C.">
+  <meta property="og:description" content="A.P.C.">
+  <!-- 트위터 카드 -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:image" content="./images/logo.gif">
+  <meta name="twitter:url" content="https://jaehee583.github.io/A.P.C./">
+  <meta name="twitter:title" content="A.P.C.">
+  <meta name="twitter:description" content="A.P.C.">
+  <!-- favicon -->
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -16,6 +30,7 @@
   <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+  <title>A.P.C.</title>
   <!-- css -->
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="index.css">
@@ -236,9 +251,6 @@
     <section class="section sec-logo">
       <div class="container">
         <div class="logo-play">
-          <img src="./images/logo-play.png" alt="로고플레이">
-          <img src="./images/logo-play.png" alt="로고플레이">
-          <img src="./images/logo-play.png" alt="로고플레이">
           <img src="./images/logo-play.png" alt="로고플레이">
           <img src="./images/logo-play.png" alt="로고플레이">
           <img src="./images/logo-play.png" alt="로고플레이">
