--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
             <li><a href="#">매장찾기</a></li>
             <li><a href="#">아이디룩몰</a></li>
           </ul>
+          <ul class="m-nav">
+            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-bars"></i></a></li>
+          </ul>
         </nav>
       </div>
     </header>
